--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <link rel="icon" href="favicon.png" />
         <meta
             property="og:url"
-            content="http://cf172194.cloudfree.jp/chapter9"
+            content="https://github.com/s-otaka/s-otaka.html.portfolio"
         />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="FRI TECH" />
